# gw2-reffect

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
.github/workflows/: build.yml  check.yml  release.yml
docs/: elements.md  getting-started.md  schema.json  shared-options.md  triggers.md
examples/: boons.json  example_boons.json  example_reminders.json  example_skillbar.json  food.json  food_reminder.json  important_boons.json  reminders.json
reffect/: Cargo.toml  build.rs
reffect/examples/: schema.rs
reffect/src/: api.rs  chat_code.rs  clipboard.rs  fmt.rs  interval.rs  lib.rs  lockbox.rs  schema.rs  serde_migrate.rs  texture_manager.rs  util.rs
reffect/src/action/: dynamic.rs  element.rs  mod.rs
reffect/src/addon/: dirs.rs  event.rs  font.rs  fonts.rs  mod.rs  packs.rs
reffect/src/addon/ui/: debug.rs  editor.rs  mod.rs  options.rs
reffect/src/assets/: mod.rs
reffect/src/context/: buffs.rs  clipboard.rs  edit_state.rs  mod.rs  settings.rs  ui.rs
reffect/src/context/player/: mod.rs  profession.rs  weapon.rs
reffect/src/element/: icon.rs  mod.rs
reffect/src/elements/: anchor.rs  animation.rs  common.rs  direction.rs  dnd.rs  mod.rs  props.rs  render_ctx.rs  render_state.rs  screen_anchor.rs  unit.rs
reffect/src/elements/align/: horizontal.rs  mod.rs
reffect/src/elements/bar/: mod.rs  progress.rs  props.rs  texture.rs
reffect/src/elements/common/: mod.rs
reffect/src/elements/element/: kind.rs  mod.rs
reffect/src/elements/group/: mod.rs
reffect/src/elements/icon/: element.rs  load.rs  mod.rs  props.rs  source.rs
reffect/src/elements/list/: action.rs  icon.rs  layout.rs  mod.rs
reffect/src/elements/pack/: mod.rs
reffect/src/elements/text/: decoration.rs  mod.rs  process.rs  props.rs
reffect/src/elements/text/fragment/: mod.rs  parse.rs
reffect/src/get_buffs/: buff.rs  error.rs
reffect/src/math/: component_wise.rs  mod.rs  round.rs
reffect/src/render/: animation.rs  bounds.rs  button.rs  colors.rs  combo.rs  component_wise.rs  draw_list.rs  font.rs  helper.rs  input.rs  input_chatlink.rs  map_ids.rs  mod.rs  popup.rs  slider.rs  spinner.rs  text.rs  tree.rs  window.rs
reffect/src/render_util/: button.rs  draw_list.rs  font.rs  helper.rs  input.rs  input_text.rs  map_ids.rs  mod.rs  popup.rs  style.rs
reffect/src/renderer/: imgui.rs  mod.rs
reffect/src/serde/: mod.rs
reffect/src/settings/: addon.rs  context.rs  general.rs  icon.rs  mod.rs
reffect/src/settings/icon/: bar.rs  duration_text.rs  legacy.rs  mod.rs  stack_text.rs  stacks_text.rs  text.rs
reffect/src/texture/: entry.rs  loaded.rs  loader.rs  manager.rs  mod.rs  source.rs
reffect/src/tree/: filter_update.rs  font_load.rs  font_reload.rs  load.rs  mod.rs  resize.rs  update.rs  visit.rs
reffect/src/trigger/: ability.rs  filter.rs  mod.rs  mode.rs
reffect/src/trigger/ability/: mod.rs  state.rs  value.rs
reffect/src/trigger/condition/: mod.rs  trigger.rs
reffect/src/trigger/map/: legacy.rs  mod.rs
reffect/src/trigger/player/: build.rs  combat.rs  gear.rs  item.rs  mod.rs  traits.rs
reffect/src/trigger/progress/: active.rs  info.rs  mod.rs  slot.rs  source.rs  value.rs
reffect/src/trigger/progress/source/: combatant.rs  legacy.rs  mod.rs  transfer.rs
reffect/src/trigger/progress/state/: mod.rs  state_condition.rs  state_type.rs
reffect/src/trigger/progress/threshold/: amount_type.rs  mod.rs  threshold_type.rs
reffect/tests/: pack.json  parse.rs  updating.rs
reffect_api/: Cargo.toml
reffect_api/src/: ability.rs  buff.rs  error.rs  lib.rs  player.rs  resource.rs  skill.rs  skillbar.rs  state.rs
reffect_arcdps/: Cargo.toml
reffect_arcdps/src/: lib.rs
reffect_core/: Cargo.toml  build.rs
reffect_core/src/: chatlink.rs  colors.rs  enums.rs  error.rs  file.rs  fmt.rs  id.rs  interval.rs  lib.rs  links.rs  lockbox.rs  metadata.rs  named.rs  profiling.rs  util.rs
reffect_core/src/context/: combatant.rs  group.rs  map.rs  mod.rs  resource.rs  target.rs  ui.rs  updates.rs
reffect_core/src/context/edit/: mod.rs  settings.rs
reffect_core/src/context/group/: member.rs  mod.rs
reffect_core/src/context/item/: mod.rs
reffect_core/src/context/player/: build.rs  gear.rs  mod.rs  mount.rs  profession.rs  race.rs  resources.rs  specialization.rs  weapon.rs
reffect_core/src/context/skill/: ability.rs  buff.rs  mod.rs  skillbar.rs  slot.rs
reffect_core/src/serde/: bitflags.rs  migrate.rs
reffect_core/src/worker/: mod.rs  stoppable.rs
reffect_internal/: Cargo.toml  build.rs
reffect_internal/src/: lib.rs
reffect_nexus/: Cargo.toml
src/: action.rs  bounds.rs  chat_code.rs  colors.rs  component_wise.rs  fmt.rs  id.rs  interval.rs  lib.rs  lockbox.rs  player.rs  render_util.rs  schema.rs  serde_migrate.rs  state.rs  texture_manager.rs  traits.rs  util.rs
src/action/: element.rs  icon.rs  mod.rs
src/addon/: event.rs  mod.rs  settings.rs  ui.rs
src/assets/: LICENSE  mod.rs
src/context/: buffs.rs  edit.rs  edit_state.rs  links.rs  map.rs  mod.rs  player.rs  render.rs  settings.rs  ui.rs
src/element/: anchor.rs  animation.rs  direction.rs  group.rs  icon.rs  icon_element.rs  icon_grid.rs  icon_group.rs  icon_source.rs  mod.rs  pack.rs  render_state.rs  state.rs  text.rs  text_align.rs  text_decoration.rs  util.rs
src/elements/: align.rs  align_horizontal.rs  anchor.rs  animation.rs  bar.rs  bar_props.rs  common.rs  direction.rs  dnd.rs  element.rs  element_type.rs  group.rs  icon.rs  icon_element.rs  icon_grid.rs  icon_named.rs  icon_props.rs  icon_source.rs  layout.rs  list.rs  list_action.rs  list_icon.rs  mod.rs  pack.rs  progress.rs  props.rs  render_state.rs  text.rs  text_align.rs  text_decoration.rs  text_props.rs  traits.rs  unit.rs
src/get_buffs/: error.rs  mod.rs  old.rs
src/id/: guid.rs  mod.rs  simple.rs
src/internal/: error.rs  mod.rs  shared.rs
src/render_util/: button.rs  combo.rs  font.rs  helper.rs  input.rs  input_color.rs  input_text.rs  map_ids.rs  mod.rs  popup.rs  slider.rs  spinner.rs  text.rs  tree.rs
src/settings/: icon.rs  mod.rs
src/state/: mod.rs  options.rs
src/tree/: load.rs  (+2 more)
(+53 files in other folders)
