[workspace]
members = [
    "reffect",
    "reffect_api",
    "reffect_internal",
]
default-members = ["reffect"]
resolver = "2"

[workspace.dependencies]
log = "0.4.18"
windows = "0.59.0"

[patch."https://github.com/zerthox/gw2-reffect"]
reffect_internal = { path = "reffect_internal" }

[profile.release]
lto = "thin"
debug = "full"
split-debuginfo = "packed"
