[workspace]
members = [
    "reffect",
    "reffect_api",
    "reffect_internal",
]
default-members = ["reffect"]
resolver = "2"

[workspace.dependencies]
enumflags2 = "0.7.11"
log = "0.4.21"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
windows = "0.59.0"

[patch."https://github.com/zerthox/gw2-reffect"]
reffect_internal = { path = "reffect_internal" }

[profile.release]
lto = "thin"
debug = "full"
split-debuginfo = "packed"
