[workspace]
members = ["reffect", "reffect_core", "reffect_internal"]
default-members = ["reffect"]
resolver = "2"

[workspace.dependencies]
enumflags2 = "0.7.11"
log = "0.4.21"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.14.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
windows = "0.61.3"

[patch."https://github.com/zerthox/gw2-reffect"]
reffect_internal = { path = "reffect_internal" }

[profile.release]
lto = true
debug = "full"
split-debuginfo = "packed"
