[package]
name = "reffect"
version = "0.9.0"
authors = ["Zerthox"]
edition = "2024"
description = "Customizable effect, resource & ability displays"
repository = "https://github.com/zerthox/gw2-reffect"
rust-version = "1.91"

[dependencies]
const-default = { version = "1.0.0", features = ["std", "derive"] }
enumflags2 = { workspace = true }
itertools = "0.14.0"
log = { workspace = true, features = ["release_max_level_debug"] }
nexus = { git = "https://github.com/zerthox/nexus-rs", features = ["log"] }
open = "5.1.2"
partial = { git = "https://github.com/zerthox/partial-rs" }
reffect_core = { path = "../reffect_core" }
reffect_internal = { git = "https://github.com/zerthox/gw2-reffect" }
rfd = { version = "0.17.1", default-features = false }
schemars = { workspace = true, optional = true }
semver = { version = "1.0.17", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.20"
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
url = "2.5.0"
windows = { workspace = true, features = ["Win32_Media"] }

[build-dependencies]
winresource = "0.1.17"

[lib]
crate-type = ["lib", "cdylib"]

[[example]]
name = "schema"
required-features = ["schema"]

[package.metadata.winresource]
ProductName = "Reffect"
OriginalFilename = "reffect.dll"

[features]
profile = ["reffect_core/profile", "reffect_internal/profile"]
schema = ["dep:schemars", "reffect_core/schema"]
