[package]
name = "reffect_api"
version = "0.1.0"
authors = ["Zerthox"]
edition = "2021"
repository = "https://github.com/zerthox/gw2-reffect"
rust-version = "1.76.0"

[dependencies]
enumflags2 = "0.7.10"
serde = { version = "1.0.214", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.5"
windows = { workspace = true, features = ["Win32_Graphics_Direct3D11"] }
