[package]
name = "reffect_api"
version = "0.1.1"
authors = ["Zerthox"]
edition = "2021"
repository = "https://github.com/zerthox/gw2-reffect"
rust-version = "1.76.0"

[dependencies]
enumflags2 = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
windows = { workspace = true, features = ["Win32_Graphics_Direct3D11"] }
