[package]
name = "reffect_arcdps"
version = "0.1.0"
edition = "2021"
authors = ["Zerthox"]

[dependencies]
arc_util = { git = "https://github.com/zerthox/arcdps-utils", features = ["serde", "settings", "update"] }
arcdps = { git = "https://github.com/zerthox/arcdps-rs", features = ["log", "serde", "strum"] }
log = { version = "0.4.18", features = ["release_max_level_info"] }
once_cell = "1.17.2"
reffect = { path = "../reffect" }

[lib]
name = "arcdps_reffect"
crate-type = ["cdylib"]
