[package]
name = "reffect_core"
version = "0.6.0"
authors = ["Zerthox"]
edition = "2024"
repository = "https://github.com/zerthox/gw2-reffect"

[dependencies]
base64 = "0.22.1"
enumflags2 = { workspace = true }
log = { workspace = true, features = ["release_max_level_debug"] }
nexus = { git = "https://github.com/zerthox/nexus-rs", features = [
    "log",
    "mumble_json",
] }
num_enum = "0.7.1"
partial = { git = "https://github.com/zerthox/partial-rs" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Media",
    "Win32_Graphics_Direct3D11",
] }
